<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/footer_bg"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="4"
    tools:ignore="MissingDefaultResource">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/thumbnail_current_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/video_thumbnail" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_weight="2.2"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/current_duration_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00" />

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/progress_seekbar_sb"
                android:layout_width="0dp"
                android:layout_height="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:progressDrawable="@drawable/seekbar_layerlist" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/total_duration_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_05_00" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:orientation="horizontal"
                android:weightSum="5.5">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/rewind_song_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/reset"
                    android:src="@drawable/reset_btn" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/previous_song_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/prev"
                    android:src="@drawable/previous_btn" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.5">

                    <vrsync.samsung.com.vrsync.Utils.CircleSeekBar
                        android:id="@+id/circular_progress_bar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:csb_arcColor="@color/transparent"
                        app:csb_arcWidth="3dp"
                        app:csb_max="100"
                        app:csb_min="0"
                        app:csb_progressColor="@color/circular_progress_bar_color"
                        app:csb_progressWidth="3dp"
                        app:csb_step="1" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/play_pause_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/play_on_all"
                        android:src="@drawable/play_big_btn" />

                </FrameLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/next_song_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/next"
                    android:src="@drawable/next_btn" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/playlist_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/playlist"
                    android:padding="@dimen/five_dp"
                    android:src="@drawable/playlist" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="5.5">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/reset" />


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:text="@string/play_on_all" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/next" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/playlist" />

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_weight="0.8"
        android:background="@color/footer_view_bg"
        android:orientation="vertical"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/up_next" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/next_song_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/video_title"
            android:textStyle="bold" />
    </android.support.v7.widget.LinearLayoutCompat>

       <!-- <android.support.v7.widget.AppCompatTextView
            android:id="@+id/next_song_channel_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_name" />
    -->

   <!-- <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/thumbnail_next_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/video_thumbnail" />

    </android.support.v7.widget.LinearLayoutCompat>-->

</android.support.v7.widget.LinearLayoutCompat>