<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/thumbnail_current_iv"
                android:layout_width="match_parent"
                android:layout_height="120dp" />

        </android.support.v7.widget.LinearLayoutCompat>


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="3.5"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_channel"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/channel_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_channel"
                android:textStyle="bold" />

        </android.support.v7.widget.LinearLayoutCompat>


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/duration_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/duration" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/play_pause_state_iv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.8"
            android:gravity="center"
            android:padding="@dimen/ten_dp"
            android:text="@string/play_pause_all_device" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/light_gray" />

</android.support.v7.widget.LinearLayoutCompat>


